objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Credit_Prequalification_Timestamp__c</fullName>
        <description>Date/Time Credit Pre-Qual was Performed As of Q4-2019, this field has been
            identified by Business Systems (and relevant stakeholders) as used or otherwise relevant
            to current business processes. To be reviewed next Q4 2021.</description>
        <inlineHelpText>Date/Time Credit Pre-Qual was Performed</inlineHelpText>
        <label>Credit Prequalification Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Credit_Review__c</fullName>
        <description>Part of QC checklist prior to conversion. As of Q4-2019, this field has been
            identified by Business Systems (and relevant stakeholders) as used or otherwise relevant
            to current business processes. To be reviewed next Q4 2021.</description>
        <inlineHelpText>Part of QC Credit-related checklist prior to conversion.</inlineHelpText>
        <label>Credit Review</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Reviewed</fullName>
                    <default>true</default>
                    <label>Not Reviewed</label>
                </value>
                <value>
                    <fullName>Need More Information</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Conditionally Passed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Score_Equifax__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <formula>Personal_Credit_Report__r.LASERCA__Credit_Score_Equifax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Score (Equifax)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Score_Experian__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <formula>Personal_Credit_Report__r.LASERCA__Credit_Score_Experian__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Score (Experian)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Score_Median__c</fullName>
        <description>Forumula to get data from PCR object As of Q4-2019, this field has been
            identified by Business Systems (and relevant stakeholders) as used or otherwise relevant
            to current business processes. To be reviewed next Q4 2021.</description>
        <formula>Personal_Credit_Report__r.LASERCA__Credit_Score_Median__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Score (Median)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Score_TransUnion1__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <formula>Personal_Credit_Report__r.LASERCA__Credit_Score_TransUnion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Score (TransUnion)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Was_Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Credit Was Escalated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Estimated_Home_Value__c</fullName>
        <description>What the applicant thinks their property is worh. We ask this in the prequal
            form. As of Q4-2019, this field has been identified by Business Systems (and relevant
            stakeholders) as used or otherwise relevant to current business processes. To be
            reviewed next Q4 2021.</description>
        <inlineHelpText>What the applicant thinks their property is worh. We ask this in the prequal
            form.</inlineHelpText>
        <label>Customer Estimated Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Not_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is set to "True" if the customer says they need more time to make a
            decision no proceed with Unison (HB Only). As of Q4-2019, this field has been identified
            by Business Systems (and relevant stakeholders) as used or otherwise relevant to current
            business processes. To be reviewed next Q4 2021.</description>
        <inlineHelpText>This is set to "True" if the customer says they need more time to make a
            decision no proceed with Unison (HB Only).</inlineHelpText>
        <label>Customer Not Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DTC_MKT_01__c</fullName>
        <description>Direct to Consumer Marketo As of Q4-2019, this field has been identified by
            Business Systems (and relevant stakeholders) as used or otherwise relevant to current
            business processes. To be reviewed next Q4 2021. As of Q4-2019, this field has been
            identified by Business Systems (and relevant stakeholders) as used or otherwise relevant
            to current business processes. To be reviewed next Q4 2021.</description>
        <label>DTC MKT 01</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Cloud_Call_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Daily Cloud Call Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daily_Queue_Checkbox__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <formula>IF( Owner:Queue.Id='00G44000004VAqi' &amp;&amp; 
   !ISPICKVAL(Status, 'Pending Qualification')&amp;&amp; 
   !ISPICKVAL(Status, 'Pre-Discovery') &amp;&amp; 
   !ISPICKVAL(Status,'Closed Lost'), 
       true, false
)</formula>
        <label>Daily Queue Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Credit_Pull__c</fullName>
        <description>Referenced in Adverse Action Letter when PS manually sends letter from
            Lead.</description>
        <formula>Personal_Credit_Report__r.LASERCA__Date_of_Credit_Report__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Credit Pull</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Lead_Status_Change__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Date of Lead Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DayofWeekClosedLost__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <formula>CASE( MOD(   DATEVALUE(Closed_Lost_Date_Time__c)  - DATE(1900, 1, 7), 7), 0, "Sunday", 1, "Monday", 2, "Tuesday", 3,
"Wednesday", 4, "Thursday", 5, "Friday", 6, "Saturday","Error")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of Week Closed Lost</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_to_Close_Lost__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <formula>Closed_Lost_Date_Time__c - CreatedDate</formula>
        <label>Days to Close Lost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declaration_Deliquency_Co__c</fullName>
        <description>Not found on application according to Confluence page As of Q4-2019, this field
            has been identified by Business Systems (and relevant stakeholders) as used or otherwise
            relevant to current business processes. To be reviewed next Q4 2021.</description>
        <label>Declaration Deliquency (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Deliquency__c</fullName>
        <description>Not found on application according to Confluence page As of Q4-2019, this field
            has been identified by Business Systems (and relevant stakeholders) as used or otherwise
            relevant to current business processes. To be reviewed next Q4 2021.</description>
        <label>Declaration Deliquency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Intend_to_Occupy_Co__c</fullName>
        <description>Not found on application according to Confluence page As of Q4-2019, this field
            has been identified by Business Systems (and relevant stakeholders) as used or otherwise
            relevant to current business processes. To be reviewed next Q4 2021.</description>
        <label>Declaration Intend to Occupy (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Intend_to_Occupy__c</fullName>
        <description>Not found on application according to Confluence page As of Q4-2019, this field
            has been identified by Business Systems (and relevant stakeholders) as used or otherwise
            relevant to current business processes. To be reviewed next Q4 2021.</description>
        <label>Declaration Intend to Occupy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Intent_of_Proceeds__c</fullName>
        <description>Question on HO Prequal for Applicant: "Have you ever had a property foreclosed
            upon?" I believe this was on previous Prequal. Current prequal does not seem to have it.
            Confirm w/ JP's team As of Q4-2019, this field has been identified by Business Systems
            (and relevant stakeholders) as used or otherwise relevant to current business processes.
            To be reviewed next Q4 2021.</description>
        <label>Declaration Intent of Proceeds</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Declaration_Lawsuit_Co__c</fullName>
        <description>Not found on application according to Confluence page As of Q4-2019, this field
            has been identified by Business Systems (and relevant stakeholders) as used or otherwise
            relevant to current business processes. To be reviewed next Q4 2021.</description>
        <label>Declaration Lawsuit (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Lawsuit__c</fullName>
        <description>Not found on application according to Confluence page As of Q4-2019, this field
            has been identified by Business Systems (and relevant stakeholders) as used or otherwise
            relevant to current business processes. To be reviewed next Q4 2021.</description>
        <label>Declaration Lawsuit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Outstanding_Judgments_Co__c</fullName>
        <description>Question on current HO application for Co-Applicant: "Are there any outstanding
            judgments against you?" As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as used or otherwise relevant to current business
            processes. To be reviewed next Q4 2021.</description>
        <label>Declaration Outstanding Judgments (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Outstanding_Judgments__c</fullName>
        <description>Question on current HO application for Applicant: "Are there any outstanding
            judgments against you?" As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as used or otherwise relevant to current business
            processes. To be reviewed next Q4 2021.</description>
        <label>Declaration Outstanding Judgments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Permanent_Resident_Co__c</fullName>
        <description>Not found on application according to Confluence page As of Q4-2019, this field
            has been identified by Business Systems (and relevant stakeholders) as used or otherwise
            relevant to current business processes. To be reviewed next Q4 2021.</description>
        <label>Declaration Permanent Resident (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Permanent_Resident__c</fullName>
        <description>Not found on application according to Confluence page As of Q4-2019, this field
            has been identified by Business Systems (and relevant stakeholders) as used or otherwise
            relevant to current business processes. To be reviewed next Q4 2021.</description>
        <label>Declaration Permanent Resident</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Power_of_Attorney_Co__c</fullName>
        <description>Question on current HO application for Applicant: "Have you given Power of
            Attorney to anyother person to handle any financial or real estate matterson your
            behalf?" As of Q4-2019, this field has been identified by Business Systems (and relevant
            stakeholders) as used or otherwise relevant to current business processes. To be
            reviewed next Q4 2021.</description>
        <label>Declaration Power of Attorney (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Power_of_Attorney__c</fullName>
        <description>Question on current HO application for Applicant: "Have you given Power of
            Attorney to anyother person to handle any financial or real estate matterson your
            behalf?" As of Q4-2019, this field has been identified by Business Systems (and relevant
            stakeholders) as used or otherwise relevant to current business processes. To be
            reviewed next Q4 2021.</description>
        <label>Declaration Power of Attorney</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_US_Citizen_Co__c</fullName>
        <description>Not found on application according to Confluence page As of Q4-2019, this field
            has been identified by Business Systems (and relevant stakeholders) as used or otherwise
            relevant to current business processes. To be reviewed next Q4 2021.</description>
        <label>Declaration U.S. Citizen (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_US_Citizen__c</fullName>
        <description>Not found on application according to Confluence page As of Q4-2019, this field
            has been identified by Business Systems (and relevant stakeholders) as used or otherwise
            relevant to current business processes. To be reviewed next Q4 2021.</description>
        <label>Declaration U.S. Citizen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delighted_Error__c</fullName>
        <description>As of Q4-2019, this field has been identified by Business Systems (and relevant
            stakeholders) as used or otherwise relevant to current business processes. To be
            reviewed next Q4 2021.</description>
        <label>Delighted Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delighted_Event__c</fullName>
        <description>As of Q4-2019, this field has been identified by Business Systems (and relevant
            stakeholders) as used or otherwise relevant to current business processes. To be
            reviewed next Q4 2021.</description>
        <formula>if( MOD(Value(Delighted_Index__c),4)=0,"Credit Approved",
if( MOD(Value(Delighted_Index__c),4)=1,"First Contact",
if( MOD(Value(Delighted_Index__c),4)=2,"Application Sent",
if( MOD(Value(Delighted_Index__c),4)=3,"Submitted",""))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delighted Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delighted_Index__c</fullName>
        <description>As of Q4-2019, this field has been identified by Business Systems (and relevant
            stakeholders) as used or otherwise relevant to current business processes. To be
            reviewed next Q4 2021.</description>
        <label>Delighted Index</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Delighted_Send_Status__c</fullName>
        <description>As of Q4-2019, this field has been identified by Business Systems (and
            relevant stakeholders) as used or otherwise relevant to current business processes. To
            be reviewed next Q4 2021.</description>
        <formula>IF(
    MOD(VALUE(Delighted_Index__c), 4)==0 &amp;&amp; ISPICKVAL(Credit_Pre_Qualification_Status__c, "Approved"), true,
    IF(
        MOD(VALUE(Delighted_Index__c), 4)==1 &amp;&amp; ISPICKVAL(Status, "Application Sent"), true,
        IF(
            MOD(VALUE(Delighted_Index__c), 4)==2 &amp;&amp; ISPICKVAL(Status, "Submitted"), true,
            IF(
                MOD(VALUE(Delighted_Index__c), 4)==3 &amp;&amp; !ISBLANK(Time_of_First_Call__c), true,
                false
            )
        )
    )
)</formula>
        <label>Delighted Send Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delighted_Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>As of Q4-2019, this field has been identified by Business Systems (and
            relevant stakeholders) as used or otherwise relevant to current business processes. To
            be reviewed next Q4 2021.</description>
        <label>Delighted Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delighted_Trigger_Status__c</fullName>
        <description>As of Q4-2019, this field has been identified by Business Systems (and
            relevant stakeholders) as used or otherwise relevant to current business processes. To
            be reviewed next Q4 2021.</description>
        <formula>IF(
    MOD(VALUE(Delighted_Index__c), 4)==0 &amp;&amp; ISPICKVAL(Credit_Pre_Qualification_Status__c, "Approved"), "Credit Pre Qualification Status is Approved",
    IF(
        MOD(VALUE(Delighted_Index__c), 4)==1 &amp;&amp; ISPICKVAL(Status, "Application Sent"), "Application Sent",
        IF(
            MOD(VALUE(Delighted_Index__c), 4)==2 &amp;&amp; ISPICKVAL(Status, "Submitted"), "Submitted",
            IF(
                MOD(VALUE(Delighted_Index__c), 4)==3 &amp;&amp; !ISBLANK(Time_of_First_Call__c), "First Contacted",
                ""
            )
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delighted Trigger Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discovery_Date_Time__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Discovery Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DocuSign_Completed_Date_Time__c</fullName>
        <description>As of Q4-2019, this field has been identified by Business Systems (and
            relevant stakeholders) as used or otherwise relevant to current business processes. To
            be reviewed next Q4 2021.</description>
        <label>DocuSign Completed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DocuSign_Sent_Date_Time__c</fullName>
        <description>As of Q4-2019, this field has been identified by Business Systems (and
            relevant stakeholders) as used or otherwise relevant to current business processes. To
            be reviewed next Q4 2021.</description>
        <label>DocuSign Sent Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Documents_In_Date_Time__c</fullName>
        <description>What is the trigger for stage to change to Docs in? As of Q4-2019, this field
            has been identified by Business Systems (and relevant stakeholders) as used or otherwise
            relevant to current business processes. To be reviewed next Q4 2021.</description>
        <label>Documents In Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Documents_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>How is this triggered? As of Q4-2019, this field has been identified by
            Business Systems (and relevant stakeholders) as used or otherwise relevant to current
            business processes. To be reviewed next Q4 2021.</description>
        <label>Documents Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dont_Let_Affiliates_Market__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Privacy rules (GLBA) require that we allow consumers to opt-out of certain
            sharing practices, if the company is engaged in such practices. It looks like we capture
            these fields twice - once for applicant and once for co-applicant. It is possible to
            capture just one time if we apply the preference to everyone. (e.g., if a co-app opts
            out of affiliate marketing, we apply that preference to both app and co-app) As of
            Q4-2019, this field has been identified by Business Systems (and relevant stakeholders)
            as used or otherwise relevant to current business processes. To be reviewed next Q4
            2021.</description>
        <label>Privacy No Affiliates Market</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dont_Share_Creditworthiness_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Privacy rules (GLBA) require that we allow consumers to opt-out of certain
            sharing practices, if the company is engaged in such practices. It looks like we capture
            these fields twice - once for applicant and once for co-applicant. It is possible to
            capture just one time if we apply the preference to everyone. (e.g., if a co-app opts
            out of affiliate marketing, we apply that preference to both app and co-app) As of
            Q4-2019, this field has been identified by Business Systems (and relevant stakeholders)
            as used or otherwise relevant to current business processes. To be reviewed next Q4
            2021.</description>
        <label>Privacy Do not share Creditworth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dont_Share_with_Non_Affiliates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Privacy rules (GLBA) require that we allow consumers to opt-out of certain
            sharing practices, if the company is engaged in such practices. It looks like we capture
            these fields twice - once for applicant and once for co-applicant. It is possible to
            capture just one time if we apply the preference to everyone. (e.g., if a co-app opts
            out of affiliate marketing, we apply that preference to both app and co-app) As of
            Q4-2019, this field has been identified by Business Systems (and relevant stakeholders)
            as used or otherwise relevant to current business processes. To be reviewed next Q4
            2021.</description>
        <label>Privacy Do not share Non-Affiliates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education_Balance1__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <formula>Personal_Credit_Report__r.LASERCA__EducationBalance__c</formula>
        <label>Education Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Emergency_Contacts__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Emergency Contacts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Referral_Type__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Employee Referral Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <restricted>true</restricted>
            <valueSetName>Employee_Referral_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_Address_Co__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Employer Address (Co)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employer_Address__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Employer Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <description>Applicant's employer name As of Q4-2019, this field has been identified by
            Business Systems (and relevant stakeholders) as used or otherwise relevant to current
            business processes. To be reviewed next Q4 2021.</description>
        <label>Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Name_co__c</fullName>
        <description>Co-Applicant's employer name As of Q4-2019, this field has been identified by
            Business Systems (and relevant stakeholders) as used or otherwise relevant to current
            business processes. To be reviewed next Q4 2021.</description>
        <label>Employer Name (Co)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Phone_Co__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Employer Phone (Co)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employer_Phone__c</fullName>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <label>Employer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Equifax_Score_Factor__c</fullName>
        <description>Referenced in Adverse Action Letter when PS manually sends letter from
            Lead.</description>
        <label>Equifax Score Factor</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Escalated_Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TO BE DEPRECATED - As of Q4-2019, this field has been identified by Business
            Systems (and relevant stakeholders) as either redundant, obsolete, or otherwise unused,
            and thus marked for deprecation.</description>
        <inlineHelpText>Hacky solution to fix the fact that we cannot figure out the FOR loop on
            escalated between lead and PCR</inlineHelpText>
        <label>Escalated Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escrow_Company_Conflict__c</fullName>
        <description>As of Q4-2019, this field has been identified by Business Systems (and
            relevant stakeholders) as used or otherwise relevant to current business processes. To
            be reviewed next Q4 2021.</description>
        <label>Escrow opened with ORTC or Placer Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escrow_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>As of Q4-2019, this field has been identified by Business Systems (and
            relevant stakeholders) as used or otherwise relevant to current business processes. To
            be reviewed next Q4 2021.</description>
        <label>Escrow Officer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Escrow Officer)</relationshipLabel>
        <relationshipName>Escrow_Officer_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Cash_To_Homeowner__c</fullName>
        <description>As of Q4-2019, this field has been identified by Business Systems (and
            relevant stakeholders) as used or otherwise relevant to current business processes. To
            be reviewed next Q4 2021.</description>
        <formula>Estimated_Funding_Amount__c -  (Sum_of_Debt_to_be_Paid_Off__c +  Unison_Transaction_Fee_Amount__c)</formula>
        <inlineHelpText>Estimated Funding Amount - (Sum of Debt to be Paid Off + Unison Transaction
            Fee Amount)</inlineHelpText>
        <label>Estimated Cash To Homeowner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>